update the style of my cool pet blog

--- a/pet-blog.html
+++ b/pet-blog.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="css/stylesheet.css">
     <meta charset="utf-8">
     <title>My pets</title>
   </head>
   <body>
-    <img src="https://s-media-cache-ak0.pinimg.com/236x/40/e3/ea/40e3eafe6c01d29b36196c4c77429876.jpg" alt="look at that dumb cat" />
     <h1>I have two cats</h1>
+    <img src="https://s-media-cache-ak0.pinimg.com/236x/40/e3/ea/40e3eafe6c01d29b36196c4c77429876.jpg" alt="look at that dumb cat" />
+
     <h2>They're the <a href="file:///Users/Guest/Desktop/my-first-webpage/my-first-webpage.html">worst</a></h2>
     <h3>Getting them was a huge mistake.</h3>
 
